create files-loginForm, registerForm. and more

--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,7 +1,5 @@
 .bg-army {
-  /* background-color: #f8f5c2; */
-  /* background-color: #fecf4c; */
-  background-color: #ffc107;
+  background-color: #f8f5c2;
 }
 
 .navbar {
