--- a/frontend/src/components/authModal/authModal.css
+++ b/frontend/src/components/authModal/authModal.css
@@ -9,12 +9,13 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  padding: 10px;
 }
 
 .modal-content {
   background-color: #fff;
-  width: 60%;
-  max-width: 90%;
+  width: 70%;
+  max-width: 900px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -54,18 +55,20 @@
 }
 
 .modal-image img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .image-caption {
   position: absolute;
-  bottom: 40px;
+  bottom: 20px;
   left: 0;
   width: 100%;
   background: rgba(0, 0, 0, 0.4);
   color: #fff;
   padding: 15px 10px;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: bold;
   text-align: center;
   box-sizing: border-box;
@@ -101,4 +104,51 @@
   background: #656f31;
   color: #fff;
   font-weight: bold;
+}
+
+@media (max-width: 900px) {
+  .modal-content {
+    width: 90%;
+    flex-direction: column;
+  }
+
+  .body-modal {
+    flex-direction: column;
+    min-height: auto;
+  }
+
+  .modal-image {
+    display: flex;
+    order: 1;
+    width: 100%;
+    height: 200px;
+    position: relative;
+    flex: auto;
+    margin-bottom: 10px;
+  }
+
+  .modal-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .image-caption {
+    bottom: 10px;
+    font-size: 1.2rem;
+    padding: 10px;
+  }
+
+  .modal-tabs {
+    order: 2;
+    width: 100%;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 500px) {
+  .tab-buttons button {
+    font-size: 1rem;
+    padding: 8px 0;
+  }
 }
