--- a/frontend/src/components/authModal/loginRegisterForms.css
+++ b/frontend/src/components/authModal/loginRegisterForms.css
@@ -34,18 +34,18 @@
 }
 
 .submit-btn {
-  background: #0056b3;
+  background: linear-gradient(to right, #003366, #004aad);
   color: white;
   border: none;
   border-radius: 8px;
   padding: 10px;
   font-size: 1rem;
   cursor: pointer;
-  transition: background 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .submit-btn:hover {
-  background: #003f7f;
+  background: linear-gradient(to right, #00264d, #003f91);
 }
 
 .no-account {
@@ -62,6 +62,25 @@
 
 .no-account .link-text:hover {
   text-decoration: underline;
+}
+
+.password-group {
+  position: relative;
+}
+
+.password-group i {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #666;
+  font-size: 1.2rem;
+  transition: color 0.2s ease;
+}
+
+.password-group i:hover {
+  color: #003f7f;
 }
 
 @media (max-width: 768px) {
@@ -94,19 +113,4 @@
   .no-account {
     font-size: 0.85rem;
   }
-}
-
-.submit-btn {
-  background: linear-gradient(to right, #003366, #004aad);
-  color: white;
-  border: none;
-  border-radius: 8px;
-  padding: 10px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-.submit-btn:hover {
-  background: linear-gradient(to right, #00264d, #003f91);
 }
