--- a/frontend/src/components/authModal/loginRegisterForms.css
+++ b/frontend/src/components/authModal/loginRegisterForms.css
@@ -1,21 +1,26 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 5px;
   text-align: center;
 }
 
 .form-title {
   font-size: 1.3rem;
   color: #003366;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .forgot {
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   color: #0056b3;
-  text-align: left;
+  text-align: right;
   cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.forgot:hover {
+  text-decoration: underline;
 }
 
 .submit-btn {
