--- a/frontend/src/components/cardHome/cardHome.css
+++ b/frontend/src/components/cardHome/cardHome.css
@@ -66,6 +66,13 @@
   color: #e0b90f;
 }
 
+.card-badges {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
+  direction: ltr;
+}
+
 .badge {
   font-size: 0.8rem;
   padding: 0.45em 0.85em;
